2013-06-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/57623
	* config/i386/i386.md (bmi_bextr_<mode>): Swap predicates and
	constraints of operand 1 and 2.

	PR target/57623
	* config/i386/i386.md (bmi2_bzhi_<mode>3): Swap AND arguments
	to match RTL canonicalization.  Swap predicates and
	constraints of operand 1 and 2.

	* tree-vect-stmts.c (vectorizable_store): Move ptr_incr var
	decl before the loop, initialize to NULL.
	(vectorizable_load): Initialize ptr_incr to NULL.

2013-06-24  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/57358
	* ipa-prop.c (parm_ref_data_preserved_p): Always return true when
	not optimizing.

2013-06-24  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (vspltis_constant): Correct for little-endian.
	(gen_easy_altivec_constant): Likewise.
	* config/rs6000/predicates.md (easy_vector_constant_add_self,
	easy_vector_constant_msb): Likewise.

2013-06-21  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-06-20  Uros Bizjak  <ubizjak@gmail.com>

	PR target/57655
	* config/i386/i386.c (construct_container): Report error if
	long double is used with disabled x87 float returns.

2013-06-20  Wei Mi  <wmi@google.com>

	Backport from mainline
	2013-06-19  Wei Mi  <wmi@google.com>

	PR rtl-optimization/57518
	* ira.c (set_paradoxical_subreg): Set pdx_subregs[regno]
	if regno is used in paradoxical subreg.
	(update_equiv_regs): Check pdx_subregs[regno] before
	set a reg to be equivalent with a mem.


2013-06-20  David Edelsohn  <dje.gcc@gmail.com>

	Backport from mainline
	2013-06-19  David Edelsohn  <dje.gcc@gmail.com>

	PR driver/57652
	* collect2.c (collect_atexit): New.
	(collect_exit): Delete.
	(main): Register collect_atexit with atexit.
	(collect_wait): Change collect_exit to exit.
	(do_wait): Same.
	* collect2.h (collect_exit): Delete.
	* tlink.c (do_tlink): Rename exit to ret. Change collect_exit to exit.

2013-06-19  Matthias Klose  <doko@ubuntu.com>

	PR driver/57651