@@ -1,3 +1,11 @@
+2013-06-28  Kirill Yukhin  <kirill.yukhin@intel.com>
+
+        * gcc.target/i386/bmi-1.c: Extend with new instrinsic.
+        Fix scan patterns.
+        * gcc.target/i386/bmi-1.c: Ditto.
+        * gcc.target/i386/bmi-bextr-4.c: New.
+        * gcc.target/i386/bmi-bextr-5.c: Ditto.
+
 2013-06-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/57623
